# desk-thing

./: .gitignore  README.md  get_port.py  main.py  main_wifi.py  packet_encoder.py  pyproject.toml  serial_test.py  winrt_control.py
hardware/: desk_thing_wifi.ino  final_desk_thing_v2.ino
